--- a/onlineShooping/src/main/webapp/assets/css/myapp.css
+++ b/onlineShooping/src/main/webapp/assets/css/myapp.css
@@ -3,6 +3,31 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/master/LICENSE)
  */
+html {
+	height: 100%;
+}
+
 body {
-  padding-top: 56px;
+	padding-top: 56px;
+	height: 100%
+}
+
+/*custom styline*/
+.wrapper{
+	min-height :100%;
+	position: relative;
+}
+
+.content{
+	padding-bottom: 60px;
+}
+
+footer{
+	margin: 0;
+}
+
+.footer{
+	position: absolute;
+	bottom:15px;
+	height:60px;
 }
