--- a/onlineShooping/.settings/org.eclipse.wst.common.component
+++ b/onlineShooping/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <dependent-module archiveName="shopingbackend-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/shopingbackend/shopingbackend">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="onlineShooping"/>
         <property name="java-output-path" value="/onlineShooping/target/classes"/>
     </wb-module>
